chore: Add more unit tests